--- a/leetcode/makefile
+++ b/leetcode/makefile
@@ -1,9 +1,1 @@
-CC=g++
-CFLAGS=-I.
-DEPS = template.h
-
-%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
-
-main: template.o
-	$(CC) -o template template.o 
+CC=g++CFLAGS=-I.DEPS = #lc.h%.o: %.c $(DEPS)	$(CC) -c -o $@ $< $(CFLAGS)main: #lc.o	$(CC) -o #lc #lc.o 
