--- a/leetcode/makefile
+++ b/leetcode/makefile
@@ -1,1 +1,9 @@
-CC=g++CFLAGS=-I.DEPS = lc.hlc.o: lc.cpp $(DEPS)	$(CC) -c -o $@ $< $(CFLAGS)main: lc.o	$(CC) -o lc lc.o
+CC=g++
+CFLAGS=-I.
+DEPS = 500lc.h
+
+%.o: %.c $(DEPS)
+	$(CC) -c -o $@ $< $(CFLAGS)
+
+main: 500lc.o
+	$(CC) -o 500lc 500lc.o
