--- a/SaxoOpenAPI/SaxoOpenAPI_CLib/SaxoOpenAPI_CLib.csproj
+++ b/SaxoOpenAPI/SaxoOpenAPI_CLib/SaxoOpenAPI_CLib.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0"/>
   </ItemGroup>
 </Project>
