--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 /SaxoOpenAPI/SaxoOpenAPI_CLib/obj
 /SaxoOpenAPI/SaxoOpenAPI_UI/bin
 /SaxoOpenAPI/SaxoOpenAPI_UI/obj
+/SaxoOpenAPI/.vs
+/SaxoOpenAPI/.vscode
+
 
